--- a/README.adoc
+++ b/README.adoc
@@ -9,6 +9,8 @@
 :H: &#9405;
 :X: &#9421;
 
+image:https://travis-ci.org/DanielSWolf/rhubarb-lip-sync.svg?branch=master["Build Status", link="https://travis-ci.org/DanielSWolf/rhubarb-lip-sync"]
+
 https://github.com/DanielSWolf/rhubarb-lip-sync[Rhubarb Lip-Sync] is a command-line tool that automatically creates 2D mouth animation from voice recordings. You can use it for animating speech in computer games, animated cartoons, or any similar project.
 
 Rhubarb Lip-Sync produces output files in various text formats (TSV/XML/JSON). If you're a programmer, this makes it easy for you to use the output in whatever way you like. If you're not a programmer, there is currently no direct way to import the result into your favorite animation tool. If this is what you need, feel free to https://github.com/DanielSWolf/rhubarb-lip-sync/issues[create an issue] telling me what tool you're using. I might add support for a few popular animation tools in the future.
