--- a/README.adoc
+++ b/README.adoc
@@ -9,7 +9,8 @@
 :H: &#9405;
 :X: &#9421;
 
-image:https://travis-ci.org/DanielSWolf/rhubarb-lip-sync.svg?branch=master["Build Status", link="https://travis-ci.org/DanielSWolf/rhubarb-lip-sync"]
+image:https://img.shields.io/travis/DanielSWolf/rhubarb-lip-sync/master.svg["Build Status", link="https://travis-ci.org/DanielSWolf/rhubarb-lip-sync"]
+image:https://img.shields.io/twitter/follow/RhubarbLipSync.svg?style=social&label=Follow["Twitter", link="https://twitter.com/RhubarbLipSync"]
 
 https://github.com/DanielSWolf/rhubarb-lip-sync[Rhubarb Lip-Sync] is a command-line tool that automatically creates 2D mouth animation from voice recordings. You can use it for animating speech in computer games, animated cartoons, or any similar project.
 
@@ -224,4 +225,7 @@ Rhubarb Lip-Sync tries to imitate the animation style used in classic 2D animate
 
 == Tell me what you think!
 
-I'd love to hear from you! If you need help or have any suggestions, feel free to https://github.com/DanielSWolf/rhubarb-lip-sync/issues[create an issue].
+I'd love to hear from you!
+
+* Have you created something great using Rhubarb Lip-Sync? *https://twitter.com/RhubarbLipSync[Let me know on Twitter!]*
+* Do you need help? Have you spotted a bug? Do you have a suggestion? *https://github.com/DanielSWolf/rhubarb-lip-sync/issues[Create an issue!]*
